@@ -4,6 +4,8 @@ git-annex (4.20130517) UNRELEASED; urgency=low
     Closes: #708619
   * Switch to MonadCatchIO-transformers for better handling of state while
     catching exceptions.
+  * Fix a zombie that could result when running a process like gpg to
+    read and write to it.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 17 May 2013 11:17:03 -0400
 
